--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: go
+
 go:
-  - 1.7.3
+  - 1.7.5
+  - 1.8rc3
   - tip
 
 os:
@@ -10,7 +12,7 @@ os:
 sudo: false
 
 install:
-  - echo "skipping travis' default"
+  - echo "skipping travis default"
 
 script:
-  - go test -v
+  - make test-all
